[package]
name = "wall_e"
version = "0.1.0"
authors = ["Yashasvi Sriram Patkuri <yash.3997@gmail.com>"]
edition = "2018"

[dependencies]
ndarray = { version = "0.13.1", features = ["serde"] }
gnuplot = "0.0.37"
rand = "0.7.3"
ndarray-rand = "0.11.0"
chrono = "0.4.15"
rayon = "1.4.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
ggez = "0.5.1"
static_assertions = "1.1.0"
